--- a/design.css
+++ b/design.css
@@ -3,24 +3,134 @@ body{
 	background: white;
 }
 
-.Container{
-	color: rgb(255, 255, 255);
-	width: 100%;
-	height: 600px;
-	margin: auto;
-	background-image: url(file:///C:/Users/sriva/OneDrive/Desktop/CloneBlockChain/images/home-hero-gradient.svg);
-}
-
-.Container2{
-
-	width: 345px;
-	height: 345px;
-	background-image: url(images/box2.png);
-}
-
 a{
 	text-decoration: none;
-	color: white;
+	color:rgb(238, 235, 243);
+}
+
+.Container1{
+	color: rgb(228, 225, 207);
+	background-size: cover;
+	width: 100%;
+	height: 650px;
+	margin: auto;
+	background-image: url(file:///C:/Users/sriva/OneDrive/Desktop/CloneBlockChain/images/home-hero-gradient.svg);
+
+}
+
+
+.Container2{
+	font-size: 1.25rem;
+    line-height: 1.75rem;
+	color: rgb(97, 61, 224);
+	display: flex;
+	background-color: #f3ebf7;
+	margin-right: 50vw;
+	align-items: flex-start;
+	justify-content: center;
+	border-radius: 40px;	
+	margin-left: 200px;
+	height: 700px;
+	width: 68vw;
+	padding: 50px;
+	margin-top: 30px;
+
+}
+
+
+                                                    /*   @Code Container2 Start*/
+
+.C2-box1{
+	      	
+}
+
+/* .C2-box2{
+	margin-left: 30px;
+
+} */
+
+.C2-box1 div{
+	border: 0.25px rgb(192, 194, 194) solid;
+	border-radius: 10px;
+	margin-bottom:10px;
+	font-style: normal;
+	font-family: sans-serif;
+
+}
+
+.points1{
+	font-size:20px;
+	padding-top: 0;
+	padding-bottom:0;
+	padding-left: 15px;
+	background-color: rgb(180, 167, 220);
+
+}
+
+.points{
+	font-family:sans-serif;
+	font-size:20px ;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 15px;
+}
+
+.points :visited{
+	color:rgb(97, 61, 224)
+}
+
+.C2-box1 h1{
+	font-size: 40px;
+    line-height: 40px;
+
+}
+
+.C2-box1 h4{
+	font-size: 20px;
+}
+
+
+.button1{
+	color:white;
+	background-color:rgb(97, 61, 224);
+	border:1px transparent white;
+	font-size: 25px;
+	border-radius: 8px;
+	padding:15px;
+	font-family: Arial, Helvetica, sans-serif;
+    margin-left:15rem;
+	
+
+}
+
+
+
+
+                                                    /*  Container2 ends */
+
+
+													/* Container1 Code Start */
+.button4{
+	color:white;
+	background-color:rgb(12, 108, 242);;
+	border:1px transparent white;
+	font-size: 20px;
+	border-radius: 8px;
+	padding:15px;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-right: 20px;
+	margin-top: 200px;
+
+}
+
+.button5{
+	color:black;
+	background-color:white;
+	border:1px transparent white;
+	font-size: 20px;
+	border-radius: 8px;
+	padding: 15px 18px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .TopTag{
@@ -45,10 +155,9 @@ a{
 .block{
 	float: right;
 	box-sizing: border-box ;
-	left- padding: 10px;
+	left-padding: 10px;
 
 }
-
 
 
 .LoginTag{
@@ -81,8 +190,9 @@ a{
 	margin-right: 200px;
 	margin-top: 50px;
 	padding-top: 0px;
-	padding-right: 0px; 
+	padding-right: 0px;  
 	padding-left: 100px;
+	
 
 }
 
@@ -95,13 +205,10 @@ a{
 .box-1 h3{
 	font-size: 25px;
 	font-family: sans-serif;
-}
-
-.box-2 {
 
 }
 
-
+													/* Container1 end */
 
 
 
