--- a/design.css
+++ b/design.css
@@ -15,7 +15,7 @@ a{
 	height: 650px;
 	margin: auto;
 	background-image: url(file:///C:/Users/sriva/OneDrive/Desktop/CloneBlockChain/images/home-hero-gradient.svg);
-
+	
 }
 
 
@@ -37,6 +37,153 @@ a{
 
 }
 
+.Container3{
+	display: flex;
+	font-size: 1.25rem;
+	color: rgb(31, 59, 143);
+	display: flex;
+	background-color: #ddf7f7;
+	margin-right: 50vw;
+	align-items: flex-start;
+	justify-content: center;
+	border-radius: 40px;	
+	margin-left: 200px;
+	height: 700px;
+	width: 68vw;
+	padding: 50px;
+	margin-top: 30px;
+}
+
+.Container4{
+	color: white;
+	display: flex;
+	background-color: rgb(18, 29, 51);
+	background-image: url(file:///C:/Users/sriva/OneDrive/Desktop/CloneBlockChain/images/banner.svg);
+	width: 100%;
+	height: 200px;
+	justify-content: center;
+	padding-top: 50px;
+}
+
+
+.Container5{
+	display: flex;
+	justify-content: center;
+
+}
+/*---------------------------------------------------------------------------------------------------------------------------*/
+
+.Container5 h3{
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 30px;
+	color: black;
+}
+.Container5 h5{
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 20px;
+	color: black;
+}
+
+.Container5 div{
+	border: 1px transparent solid;
+	padding-top: 20px;
+
+}
+.end1{
+	flex: 2;
+	padding-left: 10em;
+	font-size: 18px;
+	color: rgb(96, 96, 96);
+	list-style-type: none;
+}
+.end1 ul, .end2 ul, .end3 ul, .end4 ul{
+	list-style-type: none;
+}
+
+.end2{
+	flex: 1;
+	font-size: 18px;
+	color: rgb(96, 96, 96);
+	
+}
+
+.end3{
+	flex: 1;
+	font-size: 18px;
+	color: rgb(96, 96, 96);
+}
+
+.end4{
+	flex: 1;
+	font-size: 18px;
+	color: rgb(96, 96, 96);
+}	
+
+/*-------------------------------------------------------------------------------------------------------------------------------*/
+.button8{
+	color:rgb(28, 120, 231);
+	background-color : white;
+	border: 1px solid white;
+	font-size: 25px;
+	border-radius: 8px;
+	padding:15px;
+	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 10px;
+
+}
+
+
+.T1 h1{
+	color: white;
+	font-size: 45px;
+	font-family: 'Times New Roman', Times, serif;
+}
+
+
+.C3-box2 div{
+	border: 1px solid rgb(137, 191, 224);
+	border-radius: 10px;
+	margin-bottom:10px;
+	font-style: normal;
+	font-family: sans-serif;
+	 
+}
+
+.C3-box2{
+	margin-left: 30px  	;
+}
+
+.C3-box2 h1{
+	color: rgb(11, 100, 194);
+	font-size: 40px;
+
+}
+
+.P1 {
+	font-size:20px;
+	padding-top: 0;
+	padding-bottom:0;
+	padding-left: 15px;
+	background-color: rgb(176, 215, 239)	;
+
+}
+
+.P1 h4{
+	font-size: 20px;
+}
+
+.p{
+	font-size:20px ;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 15px;
+
+}
+.p :visited{
+	color:rgb(11, 100, 194);
+}
+
+
 
                                                     /*   @Code Container2 Start*/
 
@@ -44,10 +191,10 @@ a{
 	      	
 }
 
-/* .C2-box2{
+.C2-box2{
 	margin-left: 30px;
 
-} */
+} 
 
 .C2-box1 div{
 	border: 0.25px rgb(192, 194, 194) solid;
@@ -99,6 +246,7 @@ a{
 	padding:15px;
 	font-family: Arial, Helvetica, sans-serif;
     margin-left:15rem;
+	margin-top: 10px;
 	
 
 }
@@ -110,9 +258,11 @@ a{
 
 
 													/* Container1 Code Start */
+
+
 .button4{
 	color:white;
-	background-color:rgb(12, 108, 242);;
+	background-color:rgb(12, 108, 242);
 	border:1px transparent white;
 	font-size: 20px;
 	border-radius: 8px;
@@ -133,6 +283,32 @@ a{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.button2{
+	color: white;
+	border:2px solid white;
+	font-size: 18px;
+	border-radius: 8px;
+	padding-bottom: 12px;
+	padding-left:8px;
+	padding-right:8px; 
+	font-family: Arial, Helvetica, sans-serif;
+	margin-left: 550px;
+
+}
+
+.button6{
+	padding-left:8px;
+	padding-right:8px;
+	margin-top:20px;	
+	color: BLACK;
+	border:2px solid white;
+	background-color:white;
+	font-size: 18px;
+	border-radius: 8px;
+	padding-bottom: 12px;
+	font-family: Arial, Helvetica, sans-serif;
+
+}
 .TopTag{
 
 	font-family: Inter, -apple-system,
@@ -154,9 +330,14 @@ a{
 
 .block{
 	float: right;
-	box-sizing: border-box ;
-	left-padding: 10px;
+}
 
+.KK{
+	display: inline	;
+}
+
+.block div{
+	border: 1px solid black;
 }
 
 
@@ -167,13 +348,15 @@ a{
 	border-radius: 0.25rem;
 	position:  relative;
 	width: 100%;
-
 	font-size: 20px;
+	
+	
 }
 
 .LoginTag ul{
 	padding: 20px;
 	word-spacing: 20px;
+	display: inline;
 
 
 }
